@@ -26,6 +26,8 @@
       io.github.bbortt.snow.white.microservices.api.sync.job.api.client
     </baseClientPackage>
 
+    <artifactory-java-client.version>2.21.1</artifactory-java-client.version>
+
     <!-- Application Testing -->
     <container.registry>ghcr.io</container.registry>
     <image.tag>${project.version}</image.tag>
@@ -59,29 +61,18 @@
     </dependency>
 
     <dependency>
+      <groupId>org.jfrog.artifactory.client</groupId>
+      <artifactId>artifactory-java-client-services</artifactId>
+      <version>${artifactory-java-client.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-json</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>io.minio</groupId>
-      <artifactId>minio</artifactId>
-      <version>8.6.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.squareup.okhttp3</groupId>
-          <artifactId>okhttp</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.okhttp3</groupId>
-      <artifactId>okhttp-jvm</artifactId>
-      <version>5.3.2</version>
     </dependency>
 
     <dependency>
@@ -104,11 +95,6 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers-junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers-minio</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -142,6 +128,7 @@
           </annotationProcessorPaths>
           <compilerArgs>
             <compilerArg>-Amapstruct.unmappedTargetPolicy=ERROR</compilerArg>
+            <compilerArg>--enable-preview</compilerArg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -168,6 +155,22 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>${spring-boot.version}</version>
@@ -190,26 +193,6 @@
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
         <executions>
-          <execution>
-            <id>generate-backstage-api-client</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <inputSpec>
-                backstage/plugins/catalog-backend/src/schema/openapi.yaml
-              </inputSpec>
-              <apiPackage>${baseClientPackage}.backstage.api</apiPackage>
-              <invokerPackage>${baseClientPackage}.backstage</invokerPackage>
-              <modelPackage>${baseClientPackage}.backstage.dto</modelPackage>
-              <generatorName>java</generatorName>
-              <configOptions>
-                <generateClientAsBean>true</generateClientAsBean>
-                <library>restclient</library>
-                <useJakartaEe>true</useJakartaEe>
-              </configOptions>
-            </configuration>
-          </execution>
           <execution>
             <id>generate-api-index-api-client</id>
             <goals>
